Fix alignment of hero

--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@ body {
 
 .header {
     margin-top: 20px;
-    display: flex;
+    /* display: flex; */
+    outline: 1px solid orange;
 }
 
 .header__nav {
@@ -42,6 +43,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    
 }
 
 .header__nav a {
@@ -49,7 +51,6 @@ body {
 }
 
 .header__home {
-    /* display: block; */
     justify-self: flex-start;
     padding: 0;
     line-height: 1;
@@ -68,6 +69,8 @@ body {
 
 .header__logos {
     display: flex;
+    /* position: relative; */
+    outline: 2px solid salmon;
     /* align-items: space-between; */
     gap: 20px 25px;
     padding: 0;
@@ -90,25 +93,44 @@ nav svg:hover path {
 .hero {
     text-align: center;
     /* outline: 1px solid red; */
+    /* position: absolute; */
+    position: relative;
+    display: flex;
+    justify-content: center;
 }
 
 .hero__wrapper {
-    /* position: relative;   Breaks link hover */
-    bottom: 145px;
+    /* position: absolute; */
 }
 
 .hero__image {
+    position: absolute;
+    outline: 2px solid gold;
+    /* Moves to top of document */
+    /* Other positioning */
+    left: 50%;
+    translate: -50%;
     z-index: -1;
     margin: 0;
-    padding: 0; 
-    /* outline: 1px solid lime;   */
+    padding: 0;
+    /* outline: 1px solid lime;  */
 }
 
 .hero__image img {
     max-width: 100%;
 }
 
+.hero__text {
+    margin-top: 95%;
+    text-align: center;
+    outline: 1px solid red;
+}
+
 .hero__headline {
+
+}
+
+.hero__description {
 
 }
 
@@ -117,7 +139,7 @@ nav svg:hover path {
     text-decoration-color: var(--green);
 }
 
-.hero__description {
+.experience {
 
 }
 
